@@ -8,6 +8,7 @@ exempt of errors.
 
 - Alex (afaucher)
 - Andre Sodermans (wienerschnitzel)
+- Anthony Viallard (homer242)
 - Apostolos Syropoulos
 - Arno Willig
 - Bob Ciora
